<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E Health Care Facilities</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome</string>
    <string name="Username">Username :</string>
    <string name="Password">Password :</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Emergency">Energency</string>
    <string name="title_activity_activity__sign_up">Sign Up</string>
    <string name="fill">Please Fill In The Following</string>
    <string name="Name">Name :</string>
    <string name="Birth_date">Birth Date :</string>
    <string name="Day">DD :</string>
    <string name="Month">MM :</string>
    <string name="Year">YYYY :</string>
    <string name="Address">Address :</string>
    <string name="Age">Age :</string>
    <string name="Passcnf">Confirm Password :</string>
    <string name="Email">E-Mail :</string>
    <string name="Contact_no">Contact :</string>
    <string name="Select_bg">Blood Grp :</string>
    <string name="Select_gender">Gender :</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="title_activity_activity_home">E Health Care</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="Appointment">Appointment</string>
    <string name="Reminders">Check Appointments</string>
    <string name="Check_prescription">Check prescription</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="Update_Information">Update Info.</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_activity_update_info">Update Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="Update">Update</string>
    <string name="title_activity_activity__appointment">Take Appointment</string>
    <string name="Take_appointment">Take Appointment</string>
    <string name="title_activity_activity__reminders">Appointments\' Status</string>
    <string name="title_activity_activity__dignosis">Diagnosis</string>
    <string name="title_activity_activity_check_precription">Check Precription</string>
    <string name="Speciality">Select Speciality</string>
    <string name="Doctor">Select Doctor</string>
    <string name="Time">Select Date and Time</string>
    <string name="priscription">Your dosages</string>
    <string name="med">Medicine</string>
    <string name="dosage">Dosage</string>
    <string name="m">Morning</string>
    <string name="a">Afternoon</string>
    <string name="e">Evening</string>
    <string name="duration">Duration</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="id">Id</string>
    <string name="conformed">Your appointments\' Status</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_activity_subdigagnosis">Diagnosis</string>
    <string name="title_activity_activity_recent_trends">Recent Trends</string>
    <string name="title_activity_map">Emergency</string>

</resources>