<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proj.ehc.Home" >

    <Button
        android:id="@+id/home_appointment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_logout"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="63dp"
        android:text="@string/Take_appointment" />

    <Button
        android:id="@+id/home_priscription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_reminders"
        android:layout_below="@+id/home_reminders"
        android:text="@string/Check_prescription" />

    <Button
        android:id="@+id/home_reminders"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_appointment"
        android:layout_below="@+id/home_appointment"
        android:text="@string/Reminders" />

    <Button
        android:id="@+id/home_diagnosis"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_priscription"
        android:layout_below="@+id/home_priscription"
        android:text="@string/Diagnosis" />

    <Button
        android:id="@+id/home_update"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_diagnosis"
        android:layout_below="@+id/home_diagnosis"
        android:text="@string/Update_Information" />

    <TextView
        android:id="@+id/home_textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/home_logout"
        android:layout_alignBottom="@+id/home_logout"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="Welcome XYZ"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/home_logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/Logout" />

    <Button
        android:id="@+id/BtnHomeEmergency"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_update"
        android:layout_below="@+id/home_update"
        android:text="Emergency" />

</RelativeLayout>
