<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.ehealthcarefacilities.Activity_Appointment" >

    <TextView
        android:id="@+id/appointment_textview_select_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Speciality"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/appointment_speciality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointment_textview_select_speciality"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/appointment_textview_select_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointment_speciality"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/Doctor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appointment_textview_select_doctor" >

        <LinearLayout
            android:layout_width="262dp"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/appointment_doc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/appointment_textview_select_timings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontalScrollView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/appointment_date"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointment_textview_select_timings"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/appointment_take_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Take_appointment" />

    <Spinner
        android:id="@+id/appointment_timing"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/appointment_textview_select_timings"
        android:layout_alignTop="@+id/appointment_date" />

</RelativeLayout>